# pptist-aibackend

./: .env.example  .gitignore  MIGRATION-GUIDE.md  MIGRATION.md  QUICKSTART.md  README-EN.md  README.md  RECOMMENDATIONS.md  SECURITY.md  config.py  index.js  main.py  netlify.toml  package.json  pyproject.toml  requirements.txt  test-api.js  test_api.py  vercel.json
api/: index.py
netlify/functions/: api.js
prompts/: cover_contents.txt  outline.txt  ppt_prompts.json  section_content.txt
